--- a/kooplexhub/hub/templates/project/configure.html
+++ b/kooplexhub/hub/templates/project/configure.html
@@ -50,6 +50,7 @@
         {% render_table t_collaborators %}
 	<hr>
         <h5 class="card-title">Select environments to create for your collaborators</h5>
+	Your collaborators are free to change this environment later.
 	{% render_table t_services %}
       {% else %}
         You cannot manage collaboration of this project.
