--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -103,19 +103,10 @@ th>a:hover {
     </style>
   </head>
 
-  <body style="overflow:auto; min-height: 100vh;   position: relative;   margin: 0;">
+  <body>
     {% include 'navbar.html' %}
     {% block submenu %}{% endblock %}
-    <div class="body-content" style="
-       box-sizing: 
-       border-box;
-       min-height: 90%;
-       margin-bottom: 1em;
-       margin-top: 0.3em;
-       padding-top: .8em;
-       background-color: #f8f9fa;
-       ">
-
+    <div class="body-content">
       <div class="row">
         <div class="col-md-3">
            {% include 'search.html' %}
@@ -136,6 +127,5 @@ th>a:hover {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     {% block scripts %}{% endblock %}
-
   </body>
 </html>
