--- a/kooplexhub/hub/templates/container/stopremove.html
+++ b/kooplexhub/hub/templates/container/stopremove.html
@@ -1,7 +1,13 @@
 {% if service.state == service.ST_RUNNING %}
-   <a href="{% url 'service:stop' service.id next_page %}" role="button" class="btn btn-danger myctrl" data-toggle="tooltip" title="Stop environment {{ service.name }}"><span class="oi oi-x" aria-hidden="true"></span></a>
+    <a href="{% url 'service:stop' service.id next_page %}" role="button" class="btn btn-danger myctrl" data-toggle="tooltip" title="Stop environment {{ service.name }}"><span class="oi oi-x" aria-hidden="true"></span></a>
 {% elif service.state == service.ST_NEED_RESTART %}
-   <a href="{% url 'service:stop' service.id next_page %}" role="button" class="btn btn-warning myctrl" data-toggle="tooltip" title="Stop inconsistent environment {{ service.name }}"><span class="oi oi-x" aria-hidden="true"></span></a>
+    <div class="dropdown">
+        <a href="{% url 'service:restart' service.id next_page %}" role="button" class="btn btn-warning myctrl" data-toggle="tooltip" title="Restart inconsistent environment {{ service.name }}"><span class="oi oi-reload" aria-hidden="true"></span></a>
+      <div class="dropdown-content">
+        <a href="{% url 'service:restart' service.id next_page %}" role="button" class="btn btn-warning myctrl" data-toggle="tooltip" title="Restart inconsistent environment {{ service.name }}"><span class="oi oi-reload" aria-hidden="true"></span> Restart</a>
+        <a href="{% url 'service:stop' service.id next_page %}" role="button" class="btn btn-danger myctrl" data-toggle="tooltip" title="Stop inconsistent environment {{ service.name }}"><span class="oi oi-x" aria-hidden="true"></span> Stop</a>
+      </div>
+    </div>
 {% elif service.state == service.ST_ERROR %}
    <a href="{% url 'service:stop' service.id next_page %}" role="button" class="btn btn-danger myctrl" data-toggle="tooltip" title="Clean up resources of environment {{ service.name }}"><span class="oi oi-fire" aria-hidden="true"></span></a>
 {% else %}
