--- a/kooplexhub/hub/templates/container/startopen.html
+++ b/kooplexhub/hub/templates/container/startopen.html
@@ -16,7 +16,7 @@
 {% elif service.state == service.ST_NEED_RESTART %}
   <a href="{% url 'service:open' service.id next_page %}" target="_blank" role="button" class="btn btn-warning l" data-toggle="tooltip" title="Access inconsistent environment {{ service.name }}"><span class="oi oi-external-link" aria-hidden="true"> {{ label_open }}</span></a>
 {% elif service.state == service.ST_ERROR %}
-  <a href="#" role="button" class="btn btn-outline-warning l disabled" data-toggle="tooltip" title="Access erronous environment {{ service.name }}"><span class="oi oi-flash" aria-hidden="true"> {{ label_open }}</span></a>
+  <a href="#" role="button" class="btn btn-outline-danger l disabled" data-toggle="tooltip" title="Erronous environment {{ service.name }}"><span class="oi oi-flash" aria-hidden="true"> FIXME</span></a>
 {% else %}
   <a href="{% url 'service:start' service.id next_page %}" role="button" class="btn btn-outline-secondary l" data-toggle="tooltip" title="Start environment {{ service.name }}"><span class="oi oi-flash" aria-hidden="true"> {{ label_start }}</span></a>
 {% endif %}
