--- a/kooplexhub/hub/templates/container/stopremove.html
+++ b/kooplexhub/hub/templates/container/stopremove.html
@@ -1,6 +1,6 @@
 {% if service.state == service.ST_RUNNING %}
     <a href="{% url 'service:stop' service.id next_page %}" role="button" class="btn btn-danger myctrl" data-toggle="tooltip" title="Stop environment {{ service.name }}"><span class="oi oi-x" aria-hidden="true"></span></a>
-{% elif service.state == service.ST_NEED_RESTART %}
+{% elif service.state == service.ST_NEED_RESTART or service.state == service.ST_ERROR %}
     <div class="dropdown">
         <a href="{% url 'service:restart' service.id next_page %}" role="button" class="btn btn-warning myctrl" data-toggle="tooltip" title="Restart inconsistent environment {{ service.name }}"><span class="oi oi-reload" aria-hidden="true"></span></a>
       <div class="dropdown-content">
@@ -8,8 +8,6 @@
         <a href="{% url 'service:stop' service.id next_page %}" role="button" class="btn btn-danger myctrl" data-toggle="tooltip" title="Stop inconsistent environment {{ service.name }}"><span class="oi oi-x" aria-hidden="true"></span> Stop</a>
       </div>
     </div>
-{% elif service.state == service.ST_ERROR %}
-   <a href="{% url 'service:stop' service.id next_page %}" role="button" class="btn btn-danger myctrl" data-toggle="tooltip" title="Clean up resources of environment {{ service.name }}"><span class="oi oi-fire" aria-hidden="true"></span></a>
 {% else %}
    <a href="#" role="button" class="btn btn-danger myctrl disabled"><span class="oi oi-x" aria-hidden="true"></span></a>
 {% endif %}
