--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -1,27 +1,36 @@
-{% load staticfiles %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Kooplex Hub</title>
     <meta charset="utf-8" />
+    {% comment %}
     <!-- meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    {% endcomment %}
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    {% comment %}
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="">
     <meta name="author" content="">
+    {% endcomment %}
     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="/static/css/animate.css"  type="text/css">
-    <link rel="stylesheet" href="/static/css/font-awesome.css" type="text/css">
-    <link rel="stylesheet" href="/static/fonts/remixicon.css" type="text/css">
-    <link rel="stylesheet" href="/static/css/nexus.css"  type="text/css">
-    <link rel="stylesheet" href="/static/css/responsive.css"  type="text/css">
-    <link rel="stylesheet" href="/static/css/custom.css"  type="text/css">
-    <link rel="stylesheet" href="{% static 'fontawesome-free-5.10.2-web/css/all.css' %}">
-    <link rel="stylesheet" href="{% static 'fonts/open-iconic-master/font/css/open-iconic-bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap4-toggle.min.css' %}">
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,300" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'fonts/remixicon.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/nexus.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/responsive.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'fontawesome-free-5.10.2-web/css/all.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'fonts/open-iconic-master/font/css/open-iconic-bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap4-toggle.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:400,300">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300">
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"  crossorigin="anonymous"></script>
     <script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
@@ -122,10 +131,16 @@ th>a:hover {
       </div>
     </div>
 
+    {% block scripts %}{% endblock %}
     <script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    {% block scripts %}{% endblock %}
+    {% comment %}
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+	    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></script>
+    {% endcomment %}
+
+
   </body>
 </html>
