--- a/kooplexhub/hub/templates/report/list.html
+++ b/kooplexhub/hub/templates/report/list.html
@@ -1,83 +1,16 @@
 {% extends "layout.html" %}
 
-{% block header_extra %}
-
-<!--script src="https://kit.fontawesome.com/27d0a7c7d0.js"></script-->
-<link rel="stylesheet" href="/static/fontawesome-free-5.10.2-web/css/all.css">
-
-<style>
-.card-header .btn-vmi.collapsed:before {
-    content:"\f105";
-}
-.card-header .btn-vmi:before {
-    font-weight:900;
-   content:"\f107";
-    padding-right: 4px;
-}
-.card-header .btn:hover, 
-.card-header .btn:active, 
-.card-header .btn:focus  {
-    text-decoration:none;
-}
-
-/* Container holding the image and the text */
-.kept-cont {
-	position: relative;
-	text-align: center;
-	color: white;
-}
-/* Bottom left text */
-.bottom-left {
-	position: absolute;
-	top: 30px;
-	left: 10%;
-}
-</style>
-{% endblock %}
-
 {% block submenu %}
-<div class="navbar navbar-expand-lg navbar-light bg-light">
-  <h5><span class="badge badge-secondary">The list of reports</span></h5>
-      <h5 class="hmm" style="padding-left: 30px">Reports are a good way to present our results or create interactive pages that others can learn from. </h5>
-</div>
+  {% include 'report/report_submenu.html' with title="List of reports" submenu="list" %}
 {% endblock %}
 
-{% block main_content_left %}
-<form id="reportListSettingsForm" class="form-horizontal form-control" action="{% url 'report:filter_reports' %}" method="post">
-	{% csrf_token %}
-
-        <div  class="alert alert-secondary">
-            <input type="text" name="name" placeholder="name" value="{{ search_name }}" size="28">
-	    <input type="hidden" name="pager" value="{{ pager }}">
-	    <input type="hidden" name="sort" value="{{ sort }}">
-	</div>
-    <div class="modal-footer">
-      <button type="submit" class="btn btn-default" name="button" value="search"> Search</button>
-      <button type="submit" class="btn btn-default" name="button" value="showall">Show all</button>
-    </div>
-
-</form>
-{% endblock %}
 {% block main_content_center %}
-           {% for cat_name, report_list  in report_cats.items %}
-		<h4><span class="label label-default">  {{ cat_name }} </span></h4>
-            {% for report, table  in report_list %}
-              {% include 'report/partial.html' %}
-            {% endfor %}
-           {% endfor %}
+  {% for r in reports %}
+    {% include 'report/partial.html' with report=r image=r.image %}
+  {% endfor %}
 {% endblock %}
 
 {% block main_content_right %}
-<ul>
-	<li><span class="badge badge-pill badge-info">HTML</span> - static or interactive 
-		<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
-	<li><span class="badge badge-pill badge-success">NB</span> - notebook
-		<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
-	<li><span class="badge badge-pill badge-warning">API</span> - an application with functional endpoints
-		<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
-	<li><span class="badge badge-pill badge-primary">BOKEH</span> - bokeh application
-		<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
-</ul>
-{{block.super}}
+  {% include 'report/hint_list.html' %}
 {% endblock %}
 
