--- a/kooplexhub/hub/templates/report/newreport.html
+++ b/kooplexhub/hub/templates/report/newreport.html
@@ -1,69 +1,29 @@
 {% extends "layout.html" %}
 
-
 {% block submenu %}
-<div class="navbar navbar-expand-lg navbar-light bg-light">
-  <h5><span class="badge badge-secondary">New report</span></h5>
-</div>
+  {% include 'report/report_submenu.html' with title="Create a new report" submenu="new" %}
 {% endblock %}
 
   {% block main_content_center %}
-  <form id="newreportForm" class="form-horizontal form-control" action="{% url 'report:new' %}" data-files-url="{% url 'report:ajax_load_files' %}" method="post">
+  <form id="newreportForm" class="form-horizontal form-control" action="{% url 'report:new' %}" method="post">
     {% csrf_token %}
     <table>
       {{ f_report.as_table }}
+      {{ f_report.r_tree }}
     </table>
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Create</button>
       <button class="btn btn-default" data-dismiss="modal">Cancel</button>
     </div>
-  
   </form>
 {% endblock %}
 
-  {% block main_content_left %}
-  <ul>
-          <li><span class="badge badge-pill badge-info">HTML</span> - static or interactive </li>
-          <li><span class="badge badge-pill badge-success">NB</span> - notebook</li>
-          <li><span class="badge badge-pill badge-warning">API</span> - a served host application with functional endpoints</li>
-          <li><span class="badge badge-pill badge-primary">BOKEH</span> - bokeh application</li>
-  </ul>
-  {% endblock %}
-
-
-    {% block scripts %}
-<script>
-	// Load files for the chosen folder
-    $("#id_folder").change(function () {
-      var url = $("#newreportForm").attr("data-files-url");  // get the url of the `load_files` view
-      var folder_name = $(this).val();  // get the selected folder name from the HTML input
-
-      $.ajax({                       // initialize an AJAX request
-        url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-files/)
-        data: {
-          'folder': folder_name       // add the folder name to the GET parameters
-        },
-        success: function (data) {   // `data` is the return of the `load_files` view function
-          $("#id_index").html(data);  // replace the contents of the file input with the data that came from the server
-        }
-      });
-
-    });
-    
-      var url = $("#newreportForm").attr("data-files-url");  // get the url of the `load_files` view
-      var folder_name = $("#id_folder").val();  // get the selected folder name from the HTML input
-
-      $.ajax({                       // initialize an AJAX request
-        url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-files/)
-        data: {
-          'folder': folder_name       // add the folder name to the GET parameters
-        },
-        success: function (data) {   // `data` is the return of the `load_files` view function
-          $("#id_index").html(data);  // replace the contents of the file input with the data that came from the server
-        }
-      });
-
-    
-</script>
-  {% endblock %}
+{% block main_content_left %}
+<ul>
+        <li><span class="badge badge-pill badge-info">HTML</span> - static or interactive </li>
+        <li><span class="badge badge-pill badge-success">NB</span> - notebook</li>
+        <li><span class="badge badge-pill badge-warning">API</span> - a served host application with functional endpoints</li>
+        <li><span class="badge badge-pill badge-primary">BOKEH</span> - bokeh application</li>
+</ul>
+{% endblock %}
 
